# claw-web

./: .dockerignore  .gitignore  ARCHITECTURE_IMPROVEMENT_PLAN.md  BUILD_SUCCESS.md  CLAUDE.md  CMakeLists.txt  Caddyfile  DOCKER.md  Dockerfile  Dockerfile.arm64  README.md  README_GENERIC_MODULE.md  SETUP.md  VM_BUILD_SETUP.md  asset-loader.js  build_generic_demo.sh  build_wasm.sh  docker-compose.yml  docker-run.sh  env-marker.js  game-init.js  gamepad-bridge.js  graphics-bridge.js  index.html  keyboard-capture.js  openclaw.html  openclaw.js  package-lock.json  package.json  pointer-bridge.js  resource-loader.js  save-storage.js  site.webmanifest  sw-control.json  sw-register.js  sw.js  touch-controls.js  vercel.json  vite.config.js
.github/workflows/: deploy-gh-pages.yml
ASSETS/ACTOR_PROTOTYPES/LEVEL10/: LEVEL10_BOSS_GEM.XML
Box2D/: CMakeLists.txt
Build_Release/: IMPLEMENTATION_SUMMARY.md  WEBGL_DEMO_README.md  asset-loader.js  asset-storage.js  captain-claw-web.html  claw-web.html  config.xml  game-init.js  gamepad-bridge.js  graphics-bridge.js  keyboard-capture.js  openclaw.html  pointer-bridge.js  resource-loader.js  save-storage.js  site.webmanifest  sw-register.js  sw.js  texture-bridge.js  touch-controls.js
Build_Release/ASSETS/: GAME_OVER_MENU.XML  INGAME_MENU.XML  MENU.xml
Build_Release/game/music/: chord.xmi  powerup.xmi  powerup0.xmi
Build_Release/level1/music/: play.xmi  play0.xmi
Build_Release/level10/music/: boss0.xmi  play.xmi  play0.xmi
Build_Release/level11/music/: play.xmi  play0.xmi
Build_Release/level12/music/: play.xmi  play0.xmi
Build_Release/level13/music/: boss.xmi  play.xmi  play0.xmi
Build_Release/level14/music/: play.xmi  play0.xmi
Build_Release/level2/music/: play.xmi  play0.xmi
Build_Release/level3/music/: play.xmi  play0.xmi
Build_Release/level4/music/: play.xmi  play0.xmi
Build_Release/level5/music/: play.xmi  play0.xmi
Build_Release/level6/music/: play.xmi  play0.xmi
Build_Release/level7/music/: play.xmi  play0.xmi
Build_Release/level8/music/: play.xmi  (+1 more)
Build_Release/music/: midi-player.js
OpenClaw/: ActorController.cpp  ActorController.h  CMakeLists.txt  ClawGameApp.h  ClawGameLogic.cpp  ClawHumanView.cpp
OpenClaw/Engine/: CMakeLists.txt  Interfaces.h  SharedDefines.h
docs/: ARCHITECTURE.md  BROWSER_CONTROLS_AUDIT.md  BROWSER_UI_IMPROVEMENTS.md  GENERIC_GRAPHICS_MODULE_README.md  GENERIC_WASM_GRAPHICS_ROADMAP.md  IMMEDIATE_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  README.md  SAVE_SYSTEM.md  SCREEN_RENDERING.md  SETUP.md  TROUBLESHOOTING.md  WASM_ONLY_DEPENDENCY_REMOVAL.md
docs/developer/: ARCHITECTURE.md  BUILDING.md  GENERIC_GRAPHICS.md  HAPTIC_FEEDBACK.md  SAVE_SYSTEM.md  SCREEN_RENDERING.md
docs/player/: GAMEPAD.md  SETUP.md  TROUBLESHOOTING.md
examples/: generic_graphics_demo.cpp  generic_video_demo.cpp  generic_video_demo.html  simple_graphics_demo.cpp  simple_webgl_test.cpp  test_generic_module.cpp  test_webgl_renderer.cpp  webgl_demo.cpp
libwap/: CMakeLists.txt
scripts/: _deploy-lib.sh  deploy-prod.sh  deploy-staging.sh
staging/: asset-loader.js  asset-storage.js  claw-web.html  config.xml  env-marker.js  game-init.js  gamepad-bridge.js  graphics-bridge.js  keyboard-capture.js  openclaw.js  pointer-bridge.js  site.webmanifest  sw.js  texture-bridge.js  touch-controls.js
staging/music/: midi-player.js
(+139 files in other folders)
